assets/menu_2.css
/*
 Koop menus in sidebar for courseware pages (layout 2) 
*/
/* 
    Created on : 13.07.2020, 10:21:42
    Author     : firas
*/

#layout_content{
	padding:0px !important;
}
#layout_container{
	padding:0px !important;
}
#layout_page{
	/*min-width: 1200px !important;*/
}

.margin_center{
	margin: 0 auto;
}



.koop-footer22{
     font-size: 5px;

     color: #ffffff;
     float: left;
     
     /*
     text-align: center;
     margin-right: 4%;
     margin-top: 5%;
     */
     text-align: center;
     position: absolute; 
     bottom: 72px; 
     width: 220px;
     min-width: 210px;
	 width: 17%;
}
.koop-footer22 img{
	margin-bottom: 37px;
}
.light {
  font-weight: 300;
}
.regular {
  font-weight: 400;
}
.bold {
  font-weight: 700;
}
.black {
  font-weight: 900;
}
.fontsize13 {
  font-size: 13px;
}
    
.subchapter.selected a:before{
		    content:"• ";
}

.chapter.selected b{
		    color: #83a3d1;
		    font-weight: normal;
}

.chapter.selected{
	margin-bottom: 22px;
}
.section.selected{
		  border-bottom: 4px double #28497c !important;
}

.active-section{
	max-width: 1500px !important;
	padding-top: 0em !important;
	clear: none !important;
}

.subchapter:hover{
            /*text-shadow: 2px 2px #768eb5;*/
}

    
.title h1{
    color:#28497C !important;
}    

.width50floatleft{
	width: 50%;
	float: left;
}

.width50floatright{
	width: 50%;
	float: right;
}

.width50floatleft a{
	margin-right: 5px;
	/*margin-bottom: 5px;*/
}

.width50floatright a{
	margin-left: 5px;
	/*margin-bottom: 5px;*/
}

a.sub_kacheln {
    width: 75px;
    height: 75px;
    /*margin-left: 1.9em;
    margin-top: 2.1em;*/
    position: relative;
}
a.sub_kacheln img {
    position:absolute;
    left:0;
    -webkit-transition: opacity 0.7s ease-in-out;
    -moz-transition: opacity 0.7s ease-in-out;
    -o-transition: opacity 0.7s ease-in-out;
    transition: opacity 0.7s ease-in-out;
}
a.sub_kacheln img.top:hover {
    opacity:0;
}

.kacheln_header{
	z-index: 3;
	position: relative;
}

.koop-kacheln-behalter{
    /*margin-left: 14%;*/
    width:17%;
    height: 100%;
    float:left;
    background-color: #28497c;
    text-align: center;
    padding-top: 115px;
    font-size: Large;
    font-weight: 900;
}

a.navigate{
        color: #ffffff !important;
}

ol.active-subchapter {
    list-style: none !important;
    float: right;
    padding: 0 !important;
}

ol.active-subchapter li  > a {
    color: #28497C !important;
    width: auto !important;
    height: auto !important;
    border: 0px !important;
    background-color: #fff !important;
    background-image: none !important;
    text-transform:uppercase !important;
}

ol.subchapters{
	font-size: 14px;
	font-weight: normal;
	margin-top: 25px;
	margin-left: -20px;
	margin-bottom: 25px;
	line-height: 1.82857143;
}

#courseware{
	max-width: 100% !important;
}
                
.koop-text-behalter{
    width:60%;
    float:left;
    margin-left: 10%;
    margin-right: 10%;
    padding-top: 5%;
}
.koop-text-behalter h3 {
    font-size: 2.2em;
    margin-bottom: 1em;
    /*font-weight:normal;
    text-transform: uppercase;
    /*color: #28497c;*/
}

.koop-sub-content{
    /*margin-top: 8em;*/
    height: 100%;
}

.koop-back{
	font-size: 12px;
	color: #ffffff !important;
}


.sub_schwebend_blick img {
    width: 370px;
    height: 52px;
    margin-left: -35px;
   /* 
    margin-bottom: 4.5em;
    margin-top: -8em;*/
    position: relative;
}




#tabs{
    display: none;
}

#layout-sidebar {
    display: none;
}
#page_title_container{
    display: none;
}

.koop-content {
    margin: 30px;
}

.koop-content-centered {
    margin-left: auto;
    margin-right: auto;
    width: 750px;
}

.koop-content h1 {
    text-transform: uppercase;
    margin-bottom: 1em;
    color: #28497c;
}

.koop-content h2 {
    text-transform: uppercase;
    margin-bottom: 1em;
    color: #28497c;
}

.flex-wrapper{
    display: flex;
}

.flex-wrapper-td {
    flex-direction: column;
    display: flex;
}
 
.flex-container-smallbox {
    width: 230px;
    border: solid 2px #28497c;
    border-radius: 15px;
    margin: 15px;
    padding: 20px;
}
.flex-container-smallbox ul {
    list-style: none;
    padding-left: 0px;
}

.flex-container-smallbox ul li {
    background-size: 20px;
    background-position: 0% 50%;
    background-repeat: no-repeat;
    padding: 0.5em 0 0 2em; 
    margin: 5px;
}

.flex-container-half {
    width: 460px;
    margin: 1em;
}

.flex-container-half-index {
    width: 660px;
    margin: 1em;
    padding-top: 100px;
    padding-left: 1em;
}

.flex-container-half-linklist {
    width: 460px;
    border: solid 2px #28497c;
    border-radius: 15px;
    margin: 1em;
    padding: 20px;
}

.flex-container-half-linklist ul {
    padding: 0 40px 0 10px;
}

.koop-container-full {
    margin: 1em;
}

.flex-container-200-200 {
    width: 200px;
    height: 200px;
    margin: 3px
}

.flex-container-200-100 {
    width: 200px;
    height: 97px;
    margin-bottom: 3px;
    overflow: hidden;
}

.flex-container-200-100:last-child {
    width: 200px;
    height: 100px;
    margin-bottom: 0;
}

.flex-container-100-100 {
    width: 98px;
    height: 100px;
    margin-right: 2px;
}
.flex-container-100-100:last-child{
    width: 100px;
    margin-right: 0;
}

.flex-container-100-50 {
    width: 98px;
    height: 45px;
    margin-bottom: 2px
}

.flex-container-100-50:last-child {
    height: 50px;
    margin-bottom: 0;
}

 .fill-blue 
    {
    background-color: #28497c;
}

